fix hexlet check